# vllm-xpu-kernels

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile.xpu  KERNEL_CONFIGURATION.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/skills/: new-sycl-kernel.md
.github/: actionlint.yaml
.github/workflows/: pre-commit.yml  ut.yaml  wheel-per-commit.yaml
benchmark/: benchmark_cutlass_flash_attn_decode.py  benchmark_cutlass_flash_attn_varlen.py  benchmark_cutlass_fused_moe.py  benchmark_gdn_attn.py  benchmark_gemm_onednn.py  benchmark_grouped_topk.py  benchmark_layernorm.py  benchmark_lora.py  benchmark_mqa_logits.py  benchmark_multimodal_rotary_embedding.py  benchmark_reshape_and_cache.py  benchmark_reshape_and_cache_flash.py  benchmark_rmsnorm.py  benchmark_rotary_embedding.py  benchmark_swigluoai_and_mul.py  benchmark_swiglustep_and_mul.py  benchmark_topk_softmax.py  benchmark_topk_topp.py  presets.py  utils.py
benchmark/src/: flash_attn_interface_.py  fused_moe_interface_.py  get_model_config.py
build_script/: build_wheel.sh  build_wheel_docker.sh  gpu_runtime_packages.json  install_gpu_runtime.sh
cmake/: toolchain.cmake  utils.cmake
cmake/Modules/: FindoneDNN.cmake
csrc/: activation.cpp  arch_dispatch.h  cache.cpp  dispatch_utils.h  fused_qknorm_rope.cpp  kernel_dispatch.cpp  layernorm.cpp  layernorm_quant.cpp  ops.h  pos_encoding_kernels.cpp  sycl_first.h  tensor_utils.cpp  topk_per_row.cpp  torch_bindings.cpp  utils.h  xpu_view.cpp
csrc/attention/: merge_attn_states.cpp
csrc/core/: registration.h
csrc/flash_attn/: flash_api.cpp  pytorch_shim.h
csrc/moe/: fused_grouped_topk.cpp  fused_moe_prologue.cpp  fused_moe_prologue.hpp  grouped_topk.cpp  init_expert_map.cpp  moe_align_sum_kernels.cpp  moe_gather.cpp  moe_lora_align_sum_kernels.cpp  moe_ops.h  remap_hidden_states.cpp  topk_softmax.cpp  torch_bindings.cpp
csrc/quantization/: utils.h
csrc/quantization/fp4/: mxfp4_quant.cpp  mxfp4_quant.h
csrc/quantization/fp8/: fp8_quant.cpp  fp8_quant.h  quant_utils.h
csrc/quantization/fused_kernels/: fused_silu_mul_block_quant.cpp  fused_silu_mul_mxfp4_quant.cpp  quant_conversions.h
csrc/utils/: dpcpp.h  mem_alloc.cpp  mem_cpy.cpp  mem_cpy.h  mem_info.cpp
csrc/xpu/: activation.cpp  cache.cpp  cast.cpp  dispatch_utils.h  layernorm.cpp  mha.h  ops.h  pos_encoding_kernels.cpp  torch_bindings.cpp  utils.cpp  utils.h  vectorization_utils.hpp
csrc/xpu/attn/: CMakeLists.txt  attn_interface.cpp  attn_interface.h  paged_kv_utils.h
csrc/xpu/attn/kernel_configs/: README.md  chunk_prefill_default.conf  chunk_prefill_full.conf  paged_decode_default.conf  paged_decode_full.conf
csrc/xpu/attn/xe_2/: CMakeLists.txt  chunk_prefill.hpp  chunk_prefill_configure.cmake  chunk_prefill_enabled_policies.hpp.in  chunk_prefill_extern.hpp  chunk_prefill_extern.hpp.in  chunk_prefill_kernel.hpp  chunk_prefill_kernel_template.cpp.in  chunk_prefill_utils.hpp  chunk_prefill_xe2.cpp  fmha_utils.hpp  fmha_xe2.cpp  fmha_xe2.h  paged_decode.hpp  paged_decode_configure.cmake  paged_decode_enabled_policies.hpp.in  paged_decode_extern.hpp  paged_decode_extern.hpp.in  paged_decode_kernel_template.cpp.in  paged_decode_utils.hpp  paged_decode_xe2.cpp  paged_decode_xe2.h
csrc/xpu/attn/xe_2/collective/: chunk_prefill_epilogue.hpp  chunk_prefill_mainloop.hpp  chunk_prefill_scheduler.hpp
csrc/xpu/attn/xe_2/kernel/: chunk_prefill_kernel.hpp  paged_decode_kernel.hpp
csrc/xpu/common/: runtime.h  (+1 more)
csrc/xpu/grouped_gemm/: CMakeLists.txt  grouped_gemm_interface.cpp  grouped_gemm_interface.h
csrc/xpu/grouped_gemm/collective/gemm/: moe_array_epilogue.hpp  moe_array_mma.hpp  moe_tile_scheduler.hpp  moe_tile_scheduler_params.h
csrc/xpu/grouped_gemm/xe_2/: CMakeLists.txt  gemm_xe2.hpp  gemm_xe2_policy.hpp  grouped_gemm_xe2.cpp  grouped_gemm_xe2.h  grouped_gemm_xe2_interface.hpp
csrc/xpu/grouped_gemm/xe_default/: CMakeLists.txt  grouped_gemm.hpp  grouped_gemm_kernel.cpp  grouped_gemm_xe_default.cpp  grouped_gemm_xe_default.h
docs/: group_split_kv_design.md  test_scope_design.md
tests/: conftest.py  ops.py  register_ops.py  test_activation.py  test_apply_rotary_emb.py  test_cache.py  test_cp_gather_indexer_k_quant_cache.py  test_deepseek_scaling_rope.py  test_exponential_2d.py  test_fp4_gemm_onednn.py  test_fp8_gemm_onednn.py  test_fp8_linear.py  test_fp8_quant.py  test_fused_norm_quant.py  test_fused_qk_norm_rope.py  test_fused_quant_activation.py  test_fused_silu_mul_block_quant.py  test_fused_silu_mul_mxfp4_quant.py  test_get_memory_info.py  test_grouped_topk.py  test_indexer_k_quant_and_cache.py  test_int4_gemm_onednn.py  test_layernorm.py  test_lora_ops.py  test_mem_alloc.py  test_merge_attn_states.py  test_moe_align_block_size.py  test_moe_gather.py  test_moe_lora_align_sum.py  test_moe_sum.py  test_multimodal_rotary_embedding.py  test_mxfp4_quant.py  test_onednn_gemm.py  test_rotary_embedding.py  test_scope_profiles.py  test_swigluoai_and_mul.py  test_swiglustep_and_mul.py  test_topk.py  test_topk_per_row.py  test_topk_softmax.py  (+4 more)
tests/flash_attn/: test_flash_attn_varlen_func.py  test_mla_decode.py
tests/fused_moe/: test_fused_moe.py  test_grouped_gemm.py  test_moe_prologue.py  test_remap_hidden_states.py
tests/gdn_attn/: test_gdn_attn.py  test_gdn_attn_padded.py
tests/lora/: lora_ops.py  torch_ops.py  utils.py  xpu_ops.py
tests/mqa_logits/: test_mqa_logits.py
tests/nn/: fp8_linear.py  utils.py
tests/ops/: activation_op.py  cache_op.py  custom_ops.py  fp8_quant_op.py  grouped_topk_op.py  layernorm_op.py  moe_align_block_size_ops.py  mx_utils.py  mxfp4_quant_op.py  onednn_gemm_op.py  rotary_embedding_op.py  swigluoai_and_mul_op.py  swiglustep_and_mul_op.py  topk_op.py  topk_softmax_op.py  topk_topp_sampler_op.py
tests/quantization/: fp8_linear.py  utils.py
tools/: envs.py  mypy.sh
vllm_xpu_kernels/: __init__.py  _mx_utils.py  flash_attn_interface.py  fused_moe_interface.py  fused_moe_interface.py.origin  ref_moe_utils.py  rotary.py
vllm_xpu_kernels/quantization/: _quantize_convert.py
(+96 files in other folders)
